tests/ok/while-let-local-enum-owner-state.ari
enum Maybe {
  None,
  Some,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  let item: Maybe = Some();
  let token: own i64 = make_owned(7);
  while let Some = item {
    drop token;
    break;
  }
  return 0;
}
