tests/errors/ownership-array-element-use-after-move.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  let values: [own i64, 2] = [make_owned(1), make_owned(2)];
  let first = values[0];
  let again = values[0];
  drop first;
  drop again;
  return 0;
}
